@@ -1672,6 +1672,89 @@ class TestSlapOSSlapToolInstanceAccess(TestSlapOSSlapToolMixin):
     self.assertEqual(expected_xml, got_xml,
         '\n'.join([q for q in difflib.unified_diff(expected_xml.split('\n'), got_xml.split('\n'))]))
 
+  def test_getSoftwareReleaseListFromSoftwareProduct(self):
+    new_id = self.generateNewId()
+    software_product = self._makeSoftwareProduct(new_id)
+    # 2 published software releases
+    software_release1 = self._makeSoftwareRelease(new_id)
+    software_release2 = self._makeSoftwareRelease(self.generateNewId())
+    software_release1.publish()
+    software_release2.publish()
+    # 1 released software release, should not appear
+    software_release3 = self._makeSoftwareRelease(new_id)
+    self.assertTrue(software_release3.getValidationState() == 'released')
+    software_release1.edit(
+        aggregate_value=software_product.getRelativeUrl(),
+        url_string='http://example.org/1.cfg'
+    )
+    software_release2.edit(
+        aggregate_value=software_product.getRelativeUrl(),
+        url_string='http://example.org/2.cfg'
+    )
+    software_release3.edit(
+        aggregate_value=software_product.getRelativeUrl(),
+        url_string='http://example.org/3.cfg'
+    )
+    self.tic()
+
+    response = self.portal_slap.getSoftwareReleaseListFromSoftwareProduct(
+        software_product.getReference())
+    # check returned XML
+    xml_fp = StringIO.StringIO()
+    xml.dom.ext.PrettyPrint(xml.dom.ext.reader.Sax.FromXml(response),
+        stream=xml_fp)
+    xml_fp.seek(0)
+    got_xml = xml_fp.read()
+    expected_xml = """\
+<?xml version='1.0' encoding='UTF-8'?>
+<marshal>
+  <list id='i2'>
+    <string>%s</string>
+    <string>%s</string>
+  </list>
+</marshal>
+""" % (software_release2.getUrlString(), software_release1.getUrlString())
+    self.assertEqual(expected_xml, got_xml,
+        '\n'.join([q for q in difflib.unified_diff(expected_xml.split('\n'), got_xml.split('\n'))]))
+
+  def test_getSoftwareReleaseListFromSoftwareProduct_emptySoftwareProduct(self):
+    new_id = self.generateNewId()
+    software_product = self._makeSoftwareProduct(new_id)
+
+    response = self.portal_slap.getSoftwareReleaseListFromSoftwareProduct(
+        software_product.getReference())
+    # check returned XML
+    xml_fp = StringIO.StringIO()
+    xml.dom.ext.PrettyPrint(xml.dom.ext.reader.Sax.FromXml(response),
+        stream=xml_fp)
+    xml_fp.seek(0)
+    got_xml = xml_fp.read()
+    expected_xml = """\
+<?xml version='1.0' encoding='UTF-8'?>
+<marshal>
+  <list id='i2'/>
+</marshal>
+""" 
+    self.assertEqual(expected_xml, got_xml,
+        '\n'.join([q for q in difflib.unified_diff(expected_xml.split('\n'), got_xml.split('\n'))]))
+
+  def test_getSoftwareReleaseListFromSoftwareProduct_NoSoftwareProduct(self):
+    response = self.portal_slap.getSoftwareReleaseListFromSoftwareProduct(
+        'Can I has a nonexistent software product?')
+    # check returned XML
+    xml_fp = StringIO.StringIO()
+    xml.dom.ext.PrettyPrint(xml.dom.ext.reader.Sax.FromXml(response),
+        stream=xml_fp)
+    xml_fp.seek(0)
+    got_xml = xml_fp.read()
+    expected_xml = """\
+<?xml version='1.0' encoding='UTF-8'?>
+<marshal>
+  <list id='i2'/>
+</marshal>
+""" 
+    self.assertEqual(expected_xml, got_xml,
+        '\n'.join([q for q in difflib.unified_diff(expected_xml.split('\n'), got_xml.split('\n'))]))
 
 class TestSlapOSSlapToolPersonAccess(TestSlapOSSlapToolMixin):
   def afterSetUp(self):
